--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "jquery": "^3.1.1",
-    "mapbox.js": "^2.4.0"
+    "mapbox.js": "^2.4.0",
+    "font-awesome": "^4.6.3"
   }
 }
